--- a/src/components/ifood-kds/cancel-ifood-order-modal/cancel-ifood-order-modal.component.html
+++ b/src/components/ifood-kds/cancel-ifood-order-modal/cancel-ifood-order-modal.component.html
@@ -1,4 +1,4 @@
-<div class="fixed inset-0 bg-black/70 z-50 flex items-center justify-center p-4" (click)="closeModal.emit()">
+<div class="fixed inset-0 bg-black/70 z-[60] flex items-center justify-center p-4" (click)="closeModal.emit()">
   <div class="bg-gray-800 rounded-lg shadow-xl w-full max-w-lg" (click)="$event.stopPropagation()">
     <div class="p-4 border-b border-gray-700">
         <h3 class="text-xl font-bold text-white">Cancelar Pedido iFood #{{ order()?.ifood_display_id }}</h3>
