--- a/src/components/ifood-kds/verify-code-modal/verify-code-modal.component.html
+++ b/src/components/ifood-kds/verify-code-modal/verify-code-modal.component.html
@@ -7,8 +7,8 @@
       <p class="text-gray-300">{{ description() }}</p>
       <input 
         type="text" 
-        [(ngModel)]="verificationCode"
-        (input)="verificationCode.set($any($event.target).value.replace(/[^0-9]/g, ''))"
+        [value]="verificationCode()"
+        (input)="onCodeInput($event)"
         name="verificationCode" 
         maxlength="4" 
         pattern="[0-9]*"
